--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 Changelog
 =========
 
+1.2 (2015-02-14)
+================
+ * Integration with pungi 1.0
+
 1.1 (2014-04-26)
 ================
  * Add sphinx-doc support.
